@@ -20,6 +20,7 @@ Brian Ford		ford@vss.fsi.com
 Brian Jones		cbj@nortel.net
 Bruno Haible		haible@ilog.fr
 Chris Provenzano	proven@io.proven.org
+danbp			danpb@nospam.postmaster.co.uk
 Dave Morrison		dave@bnl.gov
 David A. Swierczek	swiercze@mr.med.ge.com
 David Zaroski		cz253@cleveland.Freenet.Edu
