@@ -1,5 +1,8 @@
 2000-08-26  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_man_pages): Generate install targets for man
+	even if man_MANS not defined.  From `danpb'.  Fixes PR automake/73.
+
 	* m4/depend.m4 (depcpp): Use `-o conftest.o'.
 	Fix for PR automake/74.  From js pendry.
 
